Community to EAP conversion -- Apply standard configuration changes
- Domain.xml JVM sizes
- Logging subsystem <subsystem supplement="no-console">logging.xml</subsystem>
- Domain.xml host-exclude elements
- Ajustments for HostExcludesTestCase

Signed-off-by: Yeray Borges <yborgess@redhat.com>